# matrix-multiplication-framework

./: CMakeLists.txt  LICENSE  README.md  generator.py
include/: dense-matrix.h  matrix-mult.h  readtype.h  terminal.h  timer.h  verify-dims.h  verify-types.h  writecsv.h
inputs/: input1024.txt  input512.txt
results/: firefly_node2.csv  firefly_node2_O2.csv
src/: Makefile  dense-matrix.cpp  matrix-mult.cpp  pygemm.py  pygemm2.py  terminal.cpp  test1.cpp  test2.cpp  test2_readmat.cpp  test2_transpose.cpp  test3.cpp  test3_stackmatrix.cpp  verify-dims.cpp  verify-types.cpp  writecsv.cpp
src/pygemm/: CMakeLists.txt  pygemm.py  pygemm2.py
